--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
-    <title>Snack Game</title>
+    <title>Snake Game</title>
 </head>
 <body>
     <h1>SNAKE GAME</h1>
